# 2024-m1-vegetation

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.adoc  README.md  arbre1_10_600.off  complexity.ipynb  config.json  intro.aux  intro.fdb_latexmk  intro.fls  intro.tex  lod_faces.csv  metrics.csv  oranger_1_600.off  presentation.tex  presentation_v0.tex  presentation_v2.synctex(busy)  presentation_v2.tex  presentation_v2.vrb  query_result.json  references.bib  report.aux  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc  requirements.txt  script_v0.txt  simplify_all.sh  trees.json  wrap_all.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  compile.yml  latex.yml
cmake/: Conan.cmake
data/: arbre2.off  bois.off
data/tree/leafless/: mix.stl
data/tree/leafy/: arbre2.stl  bois.stl
data/trees/: arbre1.off
include/: WGS84toCartesian.hpp  config.hpp  default_tree.hpp  json_helpers.hpp  mesh.hpp  query.hpp  randomnumber.hpp  tree.hpp
output/: arbre1_20_600.off  oranger_10_600.off
report/: presentation.synctex(busy)  presentation.tex  presentation_v2.tex  references.bib  report.synctex(busy)  report.tex
src/: CMakeLists.txt  config.cpp  json_helpers.cpp  main.cpp  mesh_generator.cpp  query.cpp  query_result.json  query_trees  query_trees.cpp  simplify.cpp  tree.cpp  tree_library  tree_library.cpp  tree_library.hpp  wrapper.cpp
test/: CMakeLists.txt  catch_main.cpp  test_config.cpp  test_config.json  test_dummy.cpp  test_query.cpp  test_tree.cpp  test_union.cpp  tests_eigen.cpp  tree_test.cpp
tree_ref/: Abies_0_600.stl  Abies_100_600.stl  Abies_20_600.stl  Abies_50_600.stl  Acer2_0_600.stl  Acer2_100_600.stl  Acer2_20_600.stl  Acer2_50_600.stl  Acer_0_600.stl  Acer_100_600.stl  Acer_20_600.stl  Acer_50_600.stl  Aesculus_0_600.stl  Aesculus_100_600.stl  Aesculus_20_600.stl  Aesculus_50_600.stl  Catalpa_0_600.stl  Catalpa_100_600.stl  Catalpa_20_600.stl  Catalpa_50_600.stl  Cedrus_0_600.stl  Cedrus_100_600.stl  Cedrus_20_600.stl  Cedrus_50_600.stl  Ginkgo_0_600.stl  Ginkgo_100_600.stl  Ginkgo_20_600.stl  Ginkgo_50_600.stl  Gleditsia_0_600.stl  Gleditsia_100_600.stl  Gleditsia_20_600.stl  Gleditsia_50_600.stl  Liquidambar_0_600.stl  Liquidambar_100_600.stl  Liquidambar_20_600.stl  Liquidambar_50_600.stl  Magnolia_0_600.stl  Magnolia_100_600.stl  Magnolia_20_600.stl  Magnolia_50_600.stl  (+32 more)
tree_ref/raw_tree/: Abies.stl  Ginkgo.stl  Gleditsia.stl  Magnolia.stl  Platanus.stl  Quercus.stl  arbre1.stl  bois.stl  tree.txt
